[gd_scene load_steps=2 format=3 uid="uid://b518kqvhrh8js"]

[ext_resource type="Script" path="res://spawner.gd" id="1_1wb7a"]

[node name="spawner" type="Node2D"]
script = ExtResource("1_1wb7a")

[node name="spawn_timer" type="Timer" parent="."]
autostart = true

[node name="balls" type="Node2D" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 197.0
offset_bottom = 101.0

[node name="spawn_10_balls" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SPAWN randomly"

[node name="spawn_spread_angle" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SPAWN, spreading angle"

[node name="spawn_line_up" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SPAWN, in a line"

[node name="range_spawner" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
text = "SPAWN wisely"
